tests/baselines/reference/parserSkippedTokens4.errors.txt
parserSkippedTokens4.ts(1,1): error TS1127: Invalid character.


==== parserSkippedTokens4.ts (1 errors) ====
    \  /regexp/;
    
!!! error TS1127: Invalid character.